--- a/.prettierrc
+++ b/.prettierrc
@@ -1,12 +1,5 @@
 {
   "singleQuote": true,
   "trailingComma": "all",
-      "endOfLine": "lf",
-    "prettier/prettier": [
-    "error",
-    {
-      "singleQuote": true,
-      "parser": "flow"
-    }
-  ]
+  "endOfLine": "lf"
 }
